[gd_scene load_steps=4 format=3 uid="uid://bud4ymw0n8vf8"]

[ext_resource type="Script" uid="uid://bba6nvl5wvwys" path="res://components/wave_meter.gd" id="1_euupa"]
[ext_resource type="PackedScene" uid="uid://caapeiewaemnb" path="res://components/time_bar.tscn" id="2_hdsfp"]
[ext_resource type="Theme" uid="uid://dym7h64funxyg" path="res://components/UIDefault.tres" id="2_jen57"]

[node name="WaveMeter" type="Control" groups=["wave_meter"]]
layout_mode = 3
anchors_preset = 0
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_euupa")

[node name="WaveLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 134.0
offset_bottom = 66.0
theme = ExtResource("2_jen57")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "Wave:"
vertical_alignment = 1

[node name="TimeBar" parent="." instance=ExtResource("2_hdsfp")]
position = Vector2(348, 39)

[node name="WavesCountLabel" type="Label" parent="TimeBar"]
offset_left = -68.0
offset_top = -35.0
offset_right = 63.0
offset_bottom = 33.0
theme = ExtResource("2_jen57")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 60
text = "0/00"
horizontal_alignment = 1
vertical_alignment = 1
